Fixing line break on typer and adding tiltjs to image

--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -31,14 +31,12 @@ img {
   width: 350px;
   height: 350px;
   object-fit: cover;
-  border-radius: 0em 8em;
-  border: 1px solid $color-secondary
+  border-radius: 10px;
+  border: 1px solid $color-secondary;
+  opacity: 0.6;
 }
 
-// .img-bg {
-//   margin-left: -17px;
-//   width: 100%;
-//   padding-bottom: 30px;
-//   border: 2px solid #FFFFFF;
-//   border-radius: 2px;
-// }
+img:hover {
+  background: $color-secondary;
+  opacity: 1;
+}
