--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -19,7 +19,7 @@ body {
 
 .title {
   @media (max-width: 725px) {
-    font-size: 30px;
+    font-size: 25px;
   }
   font-size: 70px;
   font-weight: 900;
@@ -28,7 +28,7 @@ body {
 
 .short-bio {
   @media (max-width: 725px) {
-    font-size: 30px;
+    font-size: 25px;
   }
   font-size: 70px;
   font-weight: 900;
@@ -37,7 +37,7 @@ body {
 
 .changing-span {
   @media (max-width: 725px) {
-    font-size: 30px;
+    font-size: 25px;
   }
   font-size: 70px;
   font-weight: 900;
